<resources>
    <string name="app_name">Lab 6</string>
    <string name="bar_title">Lab6</string>
    <string name="add">ADD</string>
    <string name="title_activity_lab1">Lab 6</string>
    <string name="home_label"><pre>Boikivskiy Andriy\nGroup IV-81\nЗК IV-8108</pre></string>
    <string name="tab_text_1">General</string>
    <string name="tab_text_2">Item 2</string>
    <string name="tab_text_3">Movies</string>
    <string name="tab_text_4">Gallery</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="diagram">Diagram</string>
    <string name="view_mode">View mode</string>
    <string name="graphic">Graphic</string>
    <string name="movie_poster">movie_poster</string>
    <string name="no_movies_found">No movies found</string>
    <string name="title">title</string>
    <string name="year">year</string>
    <string name="imdbid">imdbID</string>
    <string name="type">type</string>
    <string name="title1">Title:</string>
    <string name="genre1">Genre:</string>
    <string name="actors1">Actors:</string>
    <string name="language1">Language:</string>
    <string name="production1">Production:</string>
    <string name="released1">Released:</string>
    <string name="runtime1">Runtime:</string>
    <string name="rating1">Rating:</string>
    <string name="director1">Director:</string>
    <string name="country1">Country:</string>
    <string name="awards1">Awards:</string>
    <string name="plot1">Plot:</string>
    <string name="year1">Year:</string>
    <string name="writer">Writer:</string>
    <string name="votes">Votes:</string>
    <string name="rated">Rated:</string>
    <string name="add_icon_for_button">\'Add\' icon for button</string>
    <string name="delete">Delete</string>
</resources>